[package]
name = "deus-maze"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/deus-maze"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.maze-core]
version = "0.0.*"

[dependencies.maze-image]
version = "0.0.*"

[dev-dependencies]

[features]
default = []
mota = ["maze-image/mota"]
