[package]
name = "labyrinth"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Generate and solve maze"
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/maze-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.159", features = ["derive"], optional = true }
#taxicab-map = "0.1.3"

[dev-dependencies]

[features]
default = []
