[package]
name = "maze-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/deus-maze"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
svg = "0.13.1"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.159", features = ["derive"] }

[dev-dependencies]

[features]
default = []
