[package]
name = "maze-image"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/deus-maze"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.6"
tracing = "0.1.37"

[dependencies.maze-core]
version = "0.0.0"
path = "../maze-core"

[dev-dependencies]

[features]
default = ["mota"]
mota = []
