[package]
name = "maze-mota"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Mota renderer for maze"
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/maze-mota"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.6"

[dependencies.maze-core]
version = "0.0.0"
path = "../maze-core"

[dev-dependencies]

[features]
default = []
