[package]
name = "maze-renderer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/deus-maze"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
maze-core = { path = "../core" }

[dev-dependencies]

[features]
default = []
