[package]
name = "maze-renderer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/deus-maze"
documentation = "https://docs.rs/deus-maze"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
maze-core = { path = "../maze-core" }
svg = { version = "0.13.1", optional = true }
image = { version = "0.24.6", optional = true }

[dev-dependencies]

[features]
default = ["svg", "image"]
